<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/ui_titlebar_bg_test2" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dip"
                android:background="@drawable/ui_button_bg_test3"
                android:onClick="btnback"
                android:text="@string/back" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="70dip"
                android:text="销售出库"
                android:textColor="#000000" 
                android:textSize="17dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/actvdeliveryid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inventorySearchLabel"
                android:completionThreshold="1" 
                android:textColor="@color/black"/>

            <ExpandableListView
                android:id="@+id/lv"
                android:layout_width="fill_parent"
                android:layout_height="325dp"
                android:layout_marginTop="5dip"
                android:focusable="true" >

            </ExpandableListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_searcharea"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnorder"
            android:layout_width="70.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_normal_left"
            android:text="@string/order_list"
            android:textSize="14.0dip" 
            android:onClick="go_master"/>

        <Button
            android:id="@+id/btnaddorder"
            android:layout_width="70.0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/button_bg_defocused_right"
            android:onClick="go_salesadd"
            android:text="@string/new_order"
            android:textSize="14.0dip" />
    </LinearLayout>

</RelativeLayout>