<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/ui_titlebar_bg_test2" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dip"
            android:background="@drawable/ui_button_bg_test3"
            android:onClick="btnback"
            android:text="@string/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="70dip"
            android:text="采购入库"
            android:textColor="#000000"
            android:textSize="17dip" />
         <Button android:background="@drawable/ui_button_bg_2222"
            android:layout_width="54dip"
            android:layout_height="36dip"
            android:layout_marginLeft="60dip"
			android:layout_marginTop="6dip"
			android:text="首页"
			android:onClick="btnhome"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="15dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/spproductname"
                    android:layout_width="200dip"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(*)"
                    android:textColor="#ffff0000"
                    android:textSize="14.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:text="@string/num"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" 
                    android:maxLength="10">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="100dip"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:paddingLeft="20dip"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:text="0.00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/price"
                        android:layout_alignLeft="@+id/price"
                        android:layout_alignTop="@+id/price"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dip"
                        android:text="¥"
                        android:textSize="20dip" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/amount"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/total"
                        android:layout_width="200dip"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:paddingLeft="20dip"
                        android:text="0.00" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/total"
                        android:layout_alignLeft="@+id/total"
                        android:layout_alignTop="@+id/total"
                        android:gravity="center_vertical"
                        android:hint="¥"
                        android:paddingLeft="5dip"
                        android:textSize="20dip" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:onClick="save"
            android:text="@string/ok" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="zsave"
            android:text="@string/zsave" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:onClick="delete"
        android:text="@string/delete"
        android:visibility="gone" />

</LinearLayout>